[package]
name = "watsontts-rs"
version = "0.1.0"
authors = ["tinaxd <1834175-kitsune-k@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.0-alpha.2", features = ["blocking", "json"]}
url = "2"
